tools/ingress/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus
  namespace: monitoring
#  annotations:
#    ingress.kubernetes.io/auth-type: basic
#    ingress.kubernetes.io/auth-secret: basic-auth
#    ingress.kubernetes.io/auth-realm: "Authentication Required"
spec:
  rules:
  - host: prom.myfareye.in
    http:
      paths:
      - path: /
        backend:
          serviceName: prometheus-k8s
          servicePort: 9090
  - host: alert.myfareye.in
    http:
      paths:
      - path: /
        backend:
          serviceName: alertmanager-main
          servicePort: 9093
  - host: grafana.myfareye.in
    http:
      paths:
      - path: /
        backend:
          serviceName: grafana
          servicePort: 3000
